<resources>
    <string name="app_name">SDA Assign 2 2018: Denis Kelleher</string>
    <string name="open_camera">Implicit Intent: Open Camera</string>
    <string name="view_picture">Implicit Intent: View Picture</string>
    <string name="call_activity">Explicit Intent: Call an Activity</string>
    <string name="send_button">Send</string>
    <string name="to_Hint">To:</string>
    <string name="subject_Hint">Subject:</string>
    <string name="compose_Hint">Compose</string>
    <string name="send_buttonText">Send</string>
</resources>
