<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <EditText
        android:id="@+id/to_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:drawableBottom="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/to_Hint"
        android:inputType="none" />

    <EditText
        android:id="@+id/subject_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/to_Text"
        android:ems="10"
        android:hint="@string/subject_Hint"
        android:inputType="none" />

    <EditText
        android:id="@+id/content_Text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/send_Button"
        android:layout_below="@+id/subject_Text"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/compose_Hint"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/send_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="returnToIntent"
        android:text="@string/send_buttonText" />

</RelativeLayout>